# math-for-programmer

./: 3d.py  graph.ipynb  pyproject.toml  python.md  readme.md  vector_function.py
chapter03/: main.py
part1/: readme.md
